--- a/app/src/main/res/layout/crosshair.xml
+++ b/app/src/main/res/layout/crosshair.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.xtr.keymapper.floatingkeys.MovableFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<xtr.keymapper.floatingkeys.MovableFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="140dp"
@@ -55,4 +55,4 @@
             app:layout_constraintTop_toTopOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.xtr.keymapper.floatingkeys.MovableFrameLayout>
+</xtr.keymapper.floatingkeys.MovableFrameLayout>
