--- a/app/src/main/res/layout/activity_main_cmdview.xml
+++ b/app/src/main/res/layout/activity_main_cmdview.xml
@@ -2,49 +2,70 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="30dp">
 
-    <TextView
-        android:id="@+id/view1"
+    <androidx.cardview.widget.CardView
         android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/cardview1"
+        app:cardCornerRadius="30dp"
+        android:layout_margin="5dp"
+        app:cardBackgroundColor="@color/grey"
+        app:layout_constraintBottom_toTopOf="@id/cardview2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" >
+        <TextView
+            android:id="@+id/view1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="monospace"
+            android:gravity="bottom"
+            android:textAppearance="@android:style/TextAppearance.Material.Large"
+            android:textSize="16sp" />
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="5dp"
+        android:id="@+id/cardview2"
+        app:cardCornerRadius="30dp"
+        app:cardBackgroundColor="@color/grey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cardview1"
+        app:layout_constraintBottom_toTopOf="@id/cardview3" >
+    <TextView
+        android:id="@+id/view2"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fontFamily="monospace"
         android:gravity="bottom"
-        android:textAppearance="@android:style/TextAppearance.Material.Large"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/barrier3" />
+       />
+    </androidx.cardview.widget.CardView>
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="left"
-        app:constraint_referenced_ids="view2,view3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/view2"
+    <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:fontFamily="monospace"
-        android:gravity="bottom"
-        app:layout_constraintEnd_toStartOf="@id/barrier3"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="30dp"
+        app:cardBackgroundColor="@color/grey"
+        android:id="@+id/cardview3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/view3" />
-
+        app:layout_constraintTop_toBottomOf="@id/cardview2"
+        app:layout_constraintBottom_toBottomOf="parent">
     <TextView
         android:id="@+id/view3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:fontFamily="monospace"
         android:gravity="bottom"
-        app:layout_constraintEnd_toStartOf="@id/barrier3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view2"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        />
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
