--- a/app/src/main/res/layout/activity_main_cmdview.xml
+++ b/app/src/main/res/layout/activity_main_cmdview.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="30dp">
+    android:layout_margin="20dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:id="@+id/cardview1"
-        app:cardCornerRadius="30dp"
         android:layout_margin="5dp"
+        app:cardCornerRadius="30dp"
         app:cardBackgroundColor="@color/grey"
         app:layout_constraintBottom_toTopOf="@id/cardview2"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,6 +20,7 @@
             android:id="@+id/view1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="20dp"
             android:fontFamily="monospace"
             android:gravity="bottom"
             android:textAppearance="@android:style/TextAppearance.Material.Large"
@@ -30,7 +31,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="5dp"
+        android:layout_marginTop="10dp"
+        android:translationY="15dp"
         android:id="@+id/cardview2"
         app:cardCornerRadius="30dp"
         app:cardBackgroundColor="@color/grey"
@@ -42,6 +44,7 @@
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:fontFamily="monospace"
         android:gravity="bottom"
        />
@@ -50,7 +53,6 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="5dp"
         app:cardCornerRadius="30dp"
         app:cardBackgroundColor="@color/grey"
         android:id="@+id/cardview3"
@@ -62,6 +64,7 @@
         android:id="@+id/view3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:fontFamily="monospace"
         android:gravity="bottom"
         />
