--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".activity.MainActivity"
     tools:ignore="ContentDescription,SpUsage">
 
@@ -19,19 +20,32 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout="@layout/fragment_profiles" />
-    
-    <include layout="@layout/activity_main_cmdview"
+
+    <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:id="@+id/cmdview"
+        android:translationZ="-1dp"
+        android:translationX="20dp"
+        app:cardElevation="0dp"
+        app:cardBackgroundColor="@color/dark_grey"
+        app:cardCornerRadius="60dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/controls"/>
+        app:layout_constraintLeft_toRightOf="@id/controls">
+        <include
+            android:id="@+id/cmdview"
+            layout="@layout/activity_main_cmdview"
+            android:layout_margin="10dp"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"/>
+    </androidx.cardview.widget.CardView>
 
     <include layout="@layout/activity_main_controls"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:id="@+id/controls"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
