--- a/app/src/main/res/layout/activity_main_cmdview.xml
+++ b/app/src/main/res/layout/activity_main_cmdview.xml
@@ -5,23 +5,33 @@
     android:layout_height="match_parent"
     android:layout_margin="20dp">
 
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="top"
+        app:constraint_referenced_ids="cardview1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardview1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:id="@+id/cardview1"
         android:layout_margin="5dp"
-        app:cardCornerRadius="30dp"
         app:cardBackgroundColor="@color/grey"
-        app:layout_constraintBottom_toTopOf="@id/cardview2"
-        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="30dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toTopOf="@id/barrier3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:id="@+id/view1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="20dp"
-            android:fontFamily="monospace"
             android:gravity="bottom"
             android:textAppearance="@android:style/TextAppearance.Material.Large"
             android:textSize="16sp" />
@@ -29,45 +39,45 @@
 
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardview2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="10dp"
-        android:translationY="15dp"
-        android:id="@+id/cardview2"
-        app:cardCornerRadius="30dp"
         app:cardBackgroundColor="@color/grey"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardview1"
-        app:layout_constraintBottom_toTopOf="@id/cardview3" >
-    <TextView
-        android:id="@+id/view2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="20dp"
-        android:fontFamily="monospace"
-        android:gravity="bottom"
-       />
+        app:cardCornerRadius="30dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/cardview3"
+        app:layout_constraintTop_toBottomOf="@id/barrier3">
+
+        <TextView
+            android:id="@+id/view2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp"
+            android:fontFamily="monospace"
+            android:gravity="bottom" />
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardview3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:cardCornerRadius="30dp"
         app:cardBackgroundColor="@color/grey"
-        android:id="@+id/cardview3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cardview2"
-        app:layout_constraintBottom_toBottomOf="parent">
-    <TextView
-        android:id="@+id/view3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="20dp"
-        android:fontFamily="monospace"
-        android:gravity="bottom"
-        />
+        app:cardCornerRadius="30dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/cardview2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/barrier3">
+
+        <TextView
+            android:id="@+id/view3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp"
+            android:fontFamily="monospace"
+            android:gravity="bottom" />
     </androidx.cardview.widget.CardView>
 
 
