--- a/app/src/main/res/layout/crosshair.xml
+++ b/app/src/main/res/layout/crosshair.xml
@@ -2,13 +2,13 @@
 <xtr.keymapper.floatingkeys.MovableFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="140dp"
-    android:layout_height="100dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:ignore="HardcodedText,ContentDescription">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="140dp"
+        android:layout_height="100dp"
         android:translationZ="2dp">
 
         <ImageView
@@ -28,31 +28,47 @@
             android:scaleY="0.9"
             app:layout_constraintCircle="@id/background"
             app:srcCompat="@drawable/crosshair"
+            android:id="@+id/cross"
             app:tint="@color/white"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/editButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:theme="@style/Theme.MaterialComponents.DayNight"
-                app:backgroundTint="#FF0000"
-                app:fabSize="mini"
-                app:fabCustomSize="30dp"
-                app:srcCompat="@drawable/ic_baseline_settings_24"
-                app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/closeButton"
+            android:id="@+id/editButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:theme="@style/Theme.MaterialComponents.DayNight"
             app:backgroundTint="#FF0000"
+            app:fabSize="mini"
+            app:fabCustomSize="30dp"
+            android:layout_marginBottom="-8dp"
+            app:srcCompat="@drawable/ic_baseline_settings_24"
+            app:layout_constraintStart_toEndOf="@id/cross"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/closeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-8dp"
+            android:theme="@style/Theme.MaterialComponents.DayNight"
+            app:backgroundTint="#FF0000"
             app:fabCustomSize="30dp"
             app:fabSize="mini"
-            app:srcCompat="@android:drawable/ic_delete"
+            app:layout_constraintStart_toEndOf="@id/cross"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_delete" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/expandButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="-8dp"
+            android:theme="@style/Theme.MaterialComponents.DayNight"
+            app:backgroundTint="#FF0000"
+            app:fabCustomSize="30dp"
+            app:fabSize="mini"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/closeButton"
+            app:layout_constraintBottom_toTopOf="@id/editButton"
+            app:srcCompat="@drawable/ic_baseline_zoom_out_map_24" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </xtr.keymapper.floatingkeys.MovableFrameLayout>
