--- a/app/src/main/res/layout/dpad1.xml
+++ b/app/src/main/res/layout/dpad1.xml
@@ -19,10 +19,10 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="38dp"
             android:layout_marginBottom="38dp"
+            android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/key_down"
@@ -31,10 +31,10 @@
             android:layout_marginStart="38dp"
             android:layout_marginEnd="38dp"
             android:layout_marginBottom="16dp"
+            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/key_right"
@@ -43,10 +43,10 @@
             android:layout_marginTop="38dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="38dp"
+            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/key_up"
@@ -55,10 +55,10 @@
             android:layout_marginStart="38dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="38dp"
+            android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/closeButton"
@@ -66,12 +66,11 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:theme="@style/Theme.MaterialComponents.DayNight"
+            android:src="@android:drawable/ic_delete"
             app:backgroundTint="#FF0000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:fabSize="mini"
-            android:foregroundTint="@color/white"
-            app:srcCompat="@android:drawable/ic_delete" />
+            app:fabSize="mini" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
@@ -79,5 +78,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:translationZ="1dp"
-        app:srcCompat="@drawable/key" />
+        android:src="@drawable/key" />
 </xtr.keymapper.floatingkeys.MovableFrameLayout>
