--- a/app/src/main/res/layout/resizable.xml
+++ b/app/src/main/res/layout/resizable.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="320dp"
     android:layout_height="240dp"
@@ -17,20 +16,19 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="bottom|right"
-            app:srcCompat="@drawable/resize_handle" />
+            android:src="@drawable/resize_handle" />
         <ImageView
             android:id="@+id/save_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="top|right"
-            app:srcCompat="@drawable/ic_baseline_done_24"
-            app:tint="@color/white" />
+            android:background="@drawable/ic_baseline_done_24"
+            android:backgroundTint="@color/white"/>
 
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/crosshair"
-            app:tint="@color/white" />
+            android:src="@drawable/crosshair" />
 
 </FrameLayout>
