--- a/app/src/main/res/layout/activity_main_controls.xml
+++ b/app/src/main/res/layout/activity_main_controls.xml
@@ -20,7 +20,7 @@
         android:layout_marginLeft="4dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/config_button"
             android:layout_width="match_parent"
             android:layout_height="80dp"
@@ -29,7 +29,7 @@
             app:icon="@drawable/ic_baseline_settings_24"
             app:iconSize="26dp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/start_pointer"
             android:layout_width="match_parent"
             android:layout_height="80dp"
@@ -38,7 +38,7 @@
             app:icon="@drawable/ic_pointer_arrow"
             app:iconSize="24dp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/about_button"
             android:layout_width="match_parent"
             android:layout_height="80dp"
@@ -59,7 +59,7 @@
         app:layout_constraintRight_toLeftOf="@id/L2"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/start_editor"
             android:layout_width="match_parent"
             android:layout_height="80dp"
@@ -69,7 +69,7 @@
             app:iconSize="24dp"
             android:drawablePadding="110dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/start_in_terminal"
             android:layout_width="match_parent"
             android:layout_height="80dp"
@@ -78,7 +78,7 @@
             app:icon="@drawable/ic_terminal"
             app:iconSize="30dp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/start_server"
             android:layout_width="match_parent"
             android:layout_height="80dp"
