--- a/app/src/main/res/layout/activity_main_controls.xml
+++ b/app/src/main/res/layout/activity_main_controls.xml
@@ -1,13 +1,14 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/constrained"
+<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constrained"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"
     android:theme="@style/Theme.XtMapper.cmdview"
     app:layout_constraintBottom_toBottomOf="parent"
     android:gravity="bottom"
+    tools:background="@color/black"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <LinearLayout
