--- a/app/src/main/res/layout/profile_row_item.xml
+++ b/app/src/main/res/layout/profile_row_item.xml
@@ -16,8 +16,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
-    <ImageButton
+    <ImageView
         android:id="@+id/app_icon"
+        android:clickable="false"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@mipmap/ic_launcher_foreground"
