fix: WASD dpad invisible

--- a/app/src/main/res/layout/dpad2.xml
+++ b/app/src/main/res/layout/dpad2.xml
@@ -87,5 +87,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:translationZ="1dp"
-        app:srcCompat="@drawable/key" />
+        android:src="@drawable/key" />
 </xtr.keymapper.floatingkeys.MovableFrameLayout>
