--- a/app/src/main/res/layout/dpad2.xml
+++ b/app/src/main/res/layout/dpad2.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="HardcodedText,ContentDescription"
     android:layout_width="200dp"
+    android:theme="@style/Theme.Material3.Dark"
     android:layout_height="200dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
