Add modifier keys for shortcuts and switch profile to settings

--- a/app/src/main/res/layout/activity_configure.xml
+++ b/app/src/main/res/layout/activity_configure.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.Material3.Dark"
     tools:context=".activity.InputDeviceSelector"
     tools:ignore="ContentDescription,SpUsage">
 
